# booking-api

./: Dockerfile  README.md  docker-compose.yml  requirements.txt
app/: main.py
app/migrations/: env.py
app/migrations/seeds/: initial_seed.py
app/migrations/versions/: 83cdbdb8f14d_initial_migration.py  87dd43829e3c_technician_role.py  a7f6e14948e8_add_end_time_to_bookings_table.py  ccd3c1c6d0c9_database_seed.py
app/models/: models.py
app/repositories/: booking_repository.py  user_repository.py
app/routes/: booking_routes.py  user_routes.py  utils.py
app/schemas/: schemas.py
backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: database.py  main.py
backend/app/migrations/seeds/: initial_seed.py
backend/app/migrations/versions/: 25f5a5cc0170_renaming_user_field.py
backend/app/models/: models.py
backend/app/repositories/: booking_repository.py  technician_repository.py
backend/app/routes/: booking_routes.py  prompting_routes.py  technician_routes.py  user_routes.py  utils.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: auth.py  prompt.py  security.py
frontend/: Dockerfile  middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  middleware.ts  page.tsx
frontend/app/components/: AddBooking.tsx  BookingDetails.tsx  Chat.tsx
frontend/app/signin/: page.tsx
frontend/app/signup/: page.tsx
frontend/context/: AuthContext.tsx
frontend/lib/: api.ts  auth.ts  theme.ts
