[tool.poetry]
name = "booking-api"
version = "0.1.0"
description = ""
authors = ["Lucas Souza lucasalves.souza01@gmail.com"]
readme = "README.md"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
